--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "graphology": "^0.25.4",
     "pinia": "^2.1.7",
     "sigma": "^3.0.0-alpha3",
